    non standalone mode. Also in that case one could use xinetd which renders
    the update-inetd tool superfluous.
    (closes: #626527)
  * Added Suggests for the new -geoip module.
  * New patch: `contrib_hardening_flags' adds hardening flags to contrib/ modules.
    (Thanks Simon Ruderich for the patch).
    (closes: #668196)

 -- Francesco Paolo Lovergine <frankie@debian.org>  Thu, 10 Jan 2013 10:57:37 +0100

proftpd-dfsg (1.3.5~rc1-1) experimental; urgency=low

  * New upstream pre-release.
    (closes: #697526, #691618, #600596)
  * Refreshed main patchset for 1.3.5 source tree. CVE-2012-6095 provided
    by 3841 dropped.
  * Added mod_geoip module among contributed module and a new binary
    package to depend on GeoIP library.
  * Now all calls of /etc/init.d/proftpd or invoke-rc.d cannot fail anymore.
    (closes: #622126)
  * Now `ftp' user is only removed in postrm purge, without removing 
    its home dir. (closes: #655514)
  * Missing memcache enabling renders mod_tls_memcache unusable even
    if present. That triggered the missing libmemcached-dev b-d and
    requires a new main library dependency.
  * Removed it/ru as standalone locale directories. Reason to have them is
    lost in time and currently wrong. This is also connected with #600596
    for those languages. Sigh.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Tue, 08 Jan 2013 15:42:27 +0100

proftpd-dfsg (1.3.4a-3) unstable; urgency=low

  [SECURITY] New patch 3841 fixes CVE-2012-6095: a possible race
  condition in the handling of the MKD/XMKD FTP commands, when the UserOwner 
  directive is involved, and the attacker is on the same physical 
  machine as a running proftpd.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Tue, 08 Jan 2013 12:08:47 +0100

proftpd-dfsg (1.3.4a-2) unstable; urgency=low

  [ Mahyuddin Susanto ]
  * Team upload.
  * Fix typo in proftpd.conf templates line 133, thanks John Smith.
    (Closes: #655630)